# skyhookdm-ceph

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  git-checkout.out  idl.h  install-deps.out  install-deps.sh  notes.txt  submodule-init.out
src/cls/wasm/: CMakeCache.txt  CMakeLists.txt  Makefile  cls_wasm.cc  cls_wasm.h  cmake_install.cmake  wasmer-c-api-example  wasmer-cpp-api-example  wasmer-cpp-api-example.cc  wasmer_sum  wasmer_sum.c  wasmer_sum.cc  wasmer_sum_cpp
src/progly/: 15000x8.final.csv  CMakeLists.txt  README.md  basic-copyfrom-merge.cc  basic-query.cc  buffer_exercises.cc  convert-tpch-lineitem-table.py  convert-tpch-tables-v2.py  convert-tpch-tables.py  fbwriter_fbu_test.txt  filtering.ipynb  filtering.sh  kat-merge.cc  kat-tests.cc  queries-a--f-various-selectivities.txt  queries.txt  query.cc  query.h  query_utils.cc  query_utils.h  rados-store-glob.sh  regex-scan.cc  run-client-merge.cc  run-copyfrom-merge.cc  run-dm.cc  run-merge.cc  run-papertests.cc  run-papertests.cc_borked  run-query.cc  run-split.cc  run-split.cc_old  run-transform.cc  run-transforms.cc  run-vop.cc  run-wasm.cc  run_skyhook_query.cc  runsplit.sh  skyhook_query.cc  skyhook_query.h  tabular-datagen.cc  (+9 more)
src/progly/Lock/: queryEngine.py
src/progly/attic/: CMakeLists.txt.old  tabular-datagen.cc  tabular-scan.cc
src/progly/benchdevpartitiong/: dev-partitioned-osds.sh  setup.txt  viz.ipynb  viz2.ipynb
src/progly/cloudlab/: all.sh  build-index.sh  log2csv.py  qa-select10.sh  qa.sh  qb-select10.sh  qb.sh  qc.sh  qd-index.sh  qd.sh  qe-select10.sh  qe.sh  qf-proj.sh  qf-select10.sh  qf.sh  qg.sh  viz.ipynb
src/progly/cloudlab_cluster_setup/: checkcls.sh  clearcaches.sh  cloudlab-shared-profiles-for-reproducibility.txt  copy_ssh_keys.sh  copycls.sh  create-objs.sh  format-sdx.sh  lineitem.schema.txt  load-data.sh  load-wrapper-10MB.sh  mount-sdx.sh  ncols100.schema.txt  queries-transforms-examples.cli.sh  run_query_test.sh  skyhookdm-ceph-install-wrapper.sh  xrootd-installation-steps.txt
src/progly/cloudlab_large_cluster_experiment/: Untitled.ipynb  dstat-extract-query-time-range.py  google-spreadsheet-large-cluster.xlsx  google_spreadsheet_large_cluster.xlsx  large_cluster_experiment.sh  log-parse-extract-start-times-only.py  log-parse.py  looper.sh  viz.ipynb
src/progly/cloudlab_postgres_bench/: README  create-tablespaces-tables-copydata.ddl.sql  create.ddl  google-spreadsheet-PG-CLS-comparison-3.xlsx  google-spreadsheet-PGBENCH-skyhook-pg9.6-Sept2017.xlsx  pg-bench.sh  postgres-skyhook-example.sql  qa.10pct.int.sql  qa.10pct.sql  qb.10pct.1col.sql  qb.10pct.3cols.sql  qb.10pct.sql  qd.sql  qf.10pct.1col.sql  qf.10pct.count.sql  qf.10pct.sql  runscript.sh
src/progly/cloudlab_querying_split_objs_experiment/: 10K-50pct-split.txt  10K-75pct-split.txt  10K.txt  20K-100pct-split.txt  20K-50pct-split.txt  40K.txt  4osds-split-objs-querying.sh  4osds.split.objs.querying.10Kobjs.0pct.split.log-2  4osds.split.objs.querying.10Kobjs.100pct.split.log-1  4osds.split.objs.querying.10Kobjs.100pct.split.log-2  4osds.split.objs.querying.10Kobjs.25pct.split.log-1  4osds.split.objs.querying.10Kobjs.25pct.split.log-2  4osds.split.objs.querying.10Kobjs.75pct.split.log-1  4osds.split.objs.querying.10Kobjs.75pct.split.log-2  4osds.split.objs.querying.20Kobjs.0pct.split.log-2  4osds.split.objs.querying.20Kobjs.100pct.split.log-1  4osds.split.objs.querying.20Kobjs.100pct.split.log-2  4osds.split.objs.querying.20Kobjs.50pct.split.log-2  4osds.split.objs.querying.20Kobjs.75pct.split.log-2  google-spreadsheet-querying-split-objs-experiment.xlsx  recreate-replicated-pool.sh
src/progly/cloudlab_split_objs/: split.nobjs10000.osize4MB.rsize192.nthreads96.4osds.1client.3repl.256PGs.bluestore.SSD.results
src/progly/cloudlab_split_objs_experiment/: google-spreadsheet-split-object-experiments.xlsx  split.nobjs10000.osize2MB.rsize192.nthreads96.4osds.1client.3repl.256PGs.bluestore.SSD.params  split.nobjs10000.osize2MB.rsize192.nthreads96.4osds.1client.3repl.256PGs.bluestore.SSD.results  split.nobjs20000.osize2MB.rsize192.nthreads96.4osds.1client.3repl.256PGs.bluestore.SSD.params  split.nobjs20000.osize2MB.rsize192.nthreads96.4osds.1client.3repl.256PGs.bluestore.SSD.results
src/progly/cloudlab_split_objs_querying/: 10K-0pct-split.txt  10K-25pct-split.txt  20K-0pct-split.txt  20K-25pct-split.txt  20K-75pct-split.txt  20K.txt  4osds.split.objs.querying.10Kobjs.0pct.split.log-1  4osds.split.objs.querying.10Kobjs.50pct.split.log-1  4osds.split.objs.querying.10Kobjs.50pct.split.log-2  4osds.split.objs.querying.20Kobjs.0pct.split.log-1  4osds.split.objs.querying.20Kobjs.25pct.split.log-1  4osds.split.objs.querying.20Kobjs.25pct.split.log-2  4osds.split.objs.querying.20Kobjs.50pct.split.log-1  4osds.split.objs.querying.20Kobjs.75pct.split.log-1  clearcaches.sh  rados-store-from-infile.sh  runscript-split-querying.sh
src/progly/cloudlab_transform_objs_experiment/: run_query_test.sh  run_query_test_arity100.sh  run_query_test_arity3.sh  transform_objs.sh  transform_objs_arity100.sh  transform_objs_arity3.sh
src/progly/cloudlab_vary_cache_dir_experiment/: 1osd-cache-pressure-tests.sh  1osds-vary-cache-direction.sh  1osds.vary.cache.direction.csv  google-spreadsheet-1OSD-vary-hotcache-directions.xlsx  log-extract.py  notes.txt
src/progly/cloudlab_vary_nobjs_experiment/: 8osds.vary.nobjs.2.5k.log-repeat.very-slow-results  8osds.vary.nobjs.sh  osds-vary-nobjs-quick-experiment-sh  osds-vary-nobjs.sh
src/progly/flatbuffers/: LICENSE.txt  README.txt
src/progly/katfiles/: arity1_schema.txt  concat-data.cephget  dataset_case1_1mb.txt  dataset_newline_1mb.txt  fbwriter_fbu_gen.py  fbwriter_gen.py  katgen.sh  lineitem.txt  lineitem_schema.txt  pdsw19.py  remove_objs.py  run_transform_tests.sh  run_transform_tests_lineitem.sh  separate-data.cephget  testdata.txt  testschema.txt
src/progly/microbench/: run.sh  viz.ipynb
src/progly/microbench2/: run.sh  viz.ipynb
src/progly/paper0/: dataset_1mb_fbrows.txt  dataset_obj_v_file_1mb.txt  res_test.txt  results_20190612_180418.txt  results_20190612_180607.txt  (+1 more)
(+825 files in other folders)
